[package]
name = "rmptui"
authors = ["krolyxon"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/krolyxon/rmptui"
keywords = ["rmptui", "mpd", "music", "cli", "tui", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "0.1.0"
simple-dmenu = "0.1.0"
ratatui = "0.26.2"
crossterm = "0.27.0"
rust-fuzzy-search = "0.1.1"
