[package]
name = "rmptui"
authors = ["krolyxon"]
description = """
a fast and minimal tui mpd client
"""
readme = "README.md"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/krolyxon/rmptui"
keywords = ["rmptui", "mpd", "music", "cli", "tui", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd = "0.1.0"
simple-dmenu = "0.1.0"
ratatui = { version = "0.26.2", default-features = false, features = [
    'crossterm',
] }
crossterm = "0.27.0"
rust-fuzzy-search = "0.1.1"
